; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/lib/extr_picotls.c_aead_decrypt.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/lib/extr_picotls.c_aead_decrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_ptls_traffic_protection_t = type { i32, i32 }

@SIZE_MAX = common dso_local global i64 0, align 8
@PTLS_ALERT_BAD_RECORD_MAC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.st_ptls_traffic_protection_t*, i8*, i64*, i8*, i64)* @aead_decrypt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aead_decrypt(%struct.st_ptls_traffic_protection_t* %0, i8* %1, i64* %2, i8* %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.st_ptls_traffic_protection_t*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca [5 x i32], align 16
  store %struct.st_ptls_traffic_protection_t* %0, %struct.st_ptls_traffic_protection_t** %7, align 8
  store i8* %1, i8** %8, align 8
  store i64* %2, i64** %9, align 8
  store i8* %3, i8** %10, align 8
  store i64 %4, i64* %11, align 8
  %13 = getelementptr inbounds [5 x i32], [5 x i32]* %12, i64 0, i64 0
  %14 = load i64, i64* %11, align 8
  %15 = call i32 @build_aad(i32* %13, i64 %14)
  %16 = load %struct.st_ptls_traffic_protection_t*, %struct.st_ptls_traffic_protection_t** %7, align 8
  %17 = getelementptr inbounds %struct.st_ptls_traffic_protection_t, %struct.st_ptls_traffic_protection_t* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %8, align 8
  %20 = load i8*, i8** %10, align 8
  %21 = load i64, i64* %11, align 8
  %22 = load %struct.st_ptls_traffic_protection_t*, %struct.st_ptls_traffic_protection_t** %7, align 8
  %23 = getelementptr inbounds %struct.st_ptls_traffic_protection_t, %struct.st_ptls_traffic_protection_t* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = getelementptr inbounds [5 x i32], [5 x i32]* %12, i64 0, i64 0
  %26 = call i64 @ptls_aead_decrypt(i32 %18, i8* %19, i8* %20, i64 %21, i32 %24, i32* %25, i32 20)
  %27 = load i64*, i64** %9, align 8
  store i64 %26, i64* %27, align 8
  %28 = load i64, i64* @SIZE_MAX, align 8
  %29 = icmp eq i64 %26, %28
  br i1 %29, label %30, label %32

30:                                               ; preds = %5
  %31 = load i32, i32* @PTLS_ALERT_BAD_RECORD_MAC, align 4
  store i32 %31, i32* %6, align 4
  br label %37

32:                                               ; preds = %5
  %33 = load %struct.st_ptls_traffic_protection_t*, %struct.st_ptls_traffic_protection_t** %7, align 8
  %34 = getelementptr inbounds %struct.st_ptls_traffic_protection_t, %struct.st_ptls_traffic_protection_t* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %34, align 4
  store i32 0, i32* %6, align 4
  br label %37

37:                                               ; preds = %32, %30
  %38 = load i32, i32* %6, align 4
  ret i32 %38
}

declare dso_local i32 @build_aad(i32*, i64) #1

declare dso_local i64 @ptls_aead_decrypt(i32, i8*, i8*, i64, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
